tp2/monster_app_k8s/monster_stack/monstericon.yaml
apiVersion: v1
kind: Service
metadata:
  name: monstericon
  labels:
    app: monsterstack
spec:
  ports:
    - port: 9090
  selector:
    app: monsterstack
    partie: monstericon
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstericon
  labels:
    app: monsterstack
spec:
  replicas: 5
  selector:
    matchLabels:
      app: monsterstack
      partie: monstericon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monsterstack
        partie: monstericon
    spec:
      containers:
        - name: monstericon
          image: tecpi/monster_icon:0.1
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
          ports:
            - containerPort: 9090
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9090
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
