tp2/monster_app_k8s/monster_stack/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: monsterstack
spec:
  ports:
    - port: 6379
  selector:
    app: monsterstack
    partie: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: monsterstack
spec:
  selector:
    matchLabels:
      app: monsterstack
      partie: redis
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: monsterstack
        partie: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
