tp2/monster_app_k8s/monster_stack/monster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /monstericon
            pathType: Prefix
            backend:
              service:
                name: monstericon
                port:
                  number: 9090
